--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,5 +3,17 @@
   "packages": {
     "lib/package-one": {},
     "lib/package-two": {}
-  }
+  },
+  "extra-files": [
+    {
+      "type": "json",
+      "path": "package-lock.json",
+      "jsonpath": "$.packages.lib/package-one.version"
+    },
+    {
+      "type": "json",
+      "path": "package-lock.json",
+      "jsonpath": "$.packages.lib/package-two.version"
+    }
+  ]
 }
