--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,19 +1,23 @@
 {
   "plugins": ["node-workspace"],
   "packages": {
-    "lib/package-one": {},
-    "lib/package-two": {}
-  },
-  "extra-files": [
-    {
-      "type": "json",
-      "path": "package-lock.json",
-      "jsonpath": "$.packages.lib/package-one.version"
+    "lib/package-one": {
+      "extra-files": [
+        {
+          "type": "json",
+          "path": "package-lock.json",
+          "jsonpath": "$.packages.lib/package-one.version"
+        }
+      ]
     },
-    {
-      "type": "json",
-      "path": "package-lock.json",
-      "jsonpath": "$.packages.lib/package-two.version"
+    "lib/package-two": {
+      "extra-files": [
+        {
+          "type": "json",
+          "path": "package-lock.json",
+          "jsonpath": "$.packages.lib/package-two.version"
+        }
+      ]
     }
-  ]
+  }
 }
