--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,6 @@ permissions:
   pull-requests: write
   packages: write
 
-env:
-  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
 jobs:
   release:
     name: Release
@@ -24,21 +21,21 @@ jobs:
           command: manifest
           default-branch: main
 
-      - name: Checkout repository
-        if: ${{ steps.release.outputs.releases_created == false }}
+      - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
         with:
           ref: "${{ steps.release.outputs.releases_created && 'main' || 'release-please--branches--main' }}"
 
-      - name: Setup node
+      - name: 😻 Setup node
         uses: actions/setup-node@v3
         with:
           node-version-file: '.node-version'
-          # Configure NPM to point to Github's package registry.
-          registry-url: https://npm.pkg.github.com/
+          registry-url: 'https://npm.pkg.github.com/'
 
-      - name: Install deps
+      - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
       # This step only executes when a Release PR has been created or updated.
       # It will run the `npm install` command and commit any changes in the
@@ -51,12 +48,13 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
           git add package-lock.json
-          git diff-index --quiet HEAD || git commit -m "chore: release main" -m "running npm install in github release workflow to update package-lock.json"
+          git diff-index --quiet HEAD || git commit -m "chore: update package-lock.json" -m "running npm install in github release workflow to update package-lock.json"
           git push
 
       # Release Please has already incremented versions and published tags, so we just
       # need to publish all unpublished versions to NPM here
-      # See: https://github.com/lerna/lerna/tree/main/commands/publish#bump-from-package
-      - name: Publish packages to the Github registry
+      - name: Publish package
         if: ${{ steps.release.outputs.releases_created }}
         run: npm publish --workspaces --dry-run
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
