--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Check if Release PR exists
         id: check_release_pr
         run: |
+          echo ${{ steps.release.outputs.pr }}
           if [[ -z "${{ steps.release.outputs.pr }}" ]]; then
               echo "exists=true" >> "$GITHUB_OUTPUT"
           else
