--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release
