--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,6 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release
@@ -23,16 +21,42 @@ jobs:
           command: manifest
           default-branch: main
 
+      - name: ⬇️ Checkout repo (default branch)
+        if: ${{ steps.release.outputs.releases_created }}
+        uses: actions/checkout@v3
+
+      - name: 😻 Setup node
+        if: ${{ steps.release.outputs.releases_created }}
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: '.node-version'
+          registry-url: 'https://npm.pkg.github.com/'
+
+      - name: 📥 Download deps
+        if: ${{ steps.release.outputs.releases_created }}
+        uses: bahmutov/npm-install@v1
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+      # Release Please has already incremented versions and published tags, so we just
+      # need to publish all unpublished versions to NPM here
+      - name: Publish package
+        if: ${{ steps.release.outputs.releases_created }}
+        run: npm publish --workspaces --dry-run
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+  update_release_pr:
+    needs: release
+    name: update release pr
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
       - name: ⬇️ Checkout repo (release-please PR branch)
         id: checkout_release_please_branch
-        if: ${{ steps.release.outputs.releases_created == false }}
         uses: actions/checkout@v3
         with:
           ref: release-please--branches--main
-
-      - name: ⬇️ Checkout repo (default branch)
-        if: ${{ failure() }}
-        uses: actions/checkout@v3
 
       - name: 😻 Setup node
         uses: actions/setup-node@v3
@@ -50,7 +74,6 @@ jobs:
       # package-lock.json file. Ideally, release-please would update this file itself
       # and we could remove conditional logic from the release workflow
       - name: Update package-lock.json
-        if: ${{ steps.checkout_release_please_branch.conclusion == 'success' }}
         run: |
           echo ${{steps.checkout_release_please_branch.conclusion}}
           npm install
@@ -59,12 +82,3 @@ jobs:
           git add package-lock.json
           git diff-index --quiet HEAD || git commit -m "chore: update package-lock.json" -m "running npm install in github release workflow to update package-lock.json"
           git push
-
-
-      # Release Please has already incremented versions and published tags, so we just
-      # need to publish all unpublished versions to NPM here
-      - name: Publish package
-        if: ${{ steps.release.outputs.releases_created }}
-        run: npm publish --workspaces --dry-run
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
