--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
 
 
       - name: ⬇️ Checkout repo
+        if: ${{ steps.release.outputs.releases_created || steps.detect_release_pr.release_branch_exists }}
         uses: actions/checkout@v3
         with:
           ref: ${{ steps.detect_release_pr.release_branch_exists && 'release-please--branches--main' || 'main' }}
