--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,7 @@ jobs:
           fi
 
           echo "release_branch_exists=$release_branch_exists" >> "$GITHUB_OUTPUT"
+          echo $release_branch_exists
 
 
       - name: ⬇️ Checkout repo
