--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,7 @@
     },
     {
       "type": "linked-versions",
+      "groupName": "release-please-demo",
       "components": [
         "package-one",
         "package-two"
