--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: release-packages
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: [Build-a-Bob]
+    branches: [main]
+    types: [completed]
 
 # Modify the default permissions granted to GITHUB_TOKEN
 # see: https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
@@ -15,6 +16,8 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    # Only release the package if we have a successful build
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: google-github-actions/release-please-action@v3
         id: release
