--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Build-a-Bob
-on: [push, workflow_dispatch]
+on: 
+  push:
+  pull_request:
+    types:
+      - labeled
+    branches:
+      - release-please--branches--main
 
 jobs:
   build:
